logo added and style changed

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
      <link rel = "stylesheet" type = "text/css" href = "index.css" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
-      task's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="./src/kolon.css" rel="stylesheet">
@@ -28,9 +28,9 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body style="background-color:#ff7f04;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div  style="background-color:#ff7f04;" id="root"></div>
+    <div style="background-color:#ff7f04;" id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
